# prepzen-api

./: README.md  configurations.py  main.py  pyproject.toml  requirements.txt
AI_Utility/: final_interview.py  genai.py  quiz.py
Admin/: routes.py
Auth/: dependencies.py  jwt_handler.py  routes.py
Conclude/: routes.py
Dashboard/: routes.py
Domain/: routes.py
Feedback/: routes.py
Final/: routes.py
Learning/: routes.py
Notification/: routes.py
Quiz/: routes.py
Reports/: routes.py
Response/: routes.py
database/DTOs/: evaluation_metrics.py  user_interview_question.py
database/Dashboards/: models.py
database/Domains/: models.py
database/Interviews/: models.py
database/Learnings/: models.py
database/Notifications/: models.py
database/Quiz/: models.py
database/Reports/: models.py
database/Users/: models.py
